Java 16, Architectury, and an absolute clusterfuck. Please don't look at this, please, please.